<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
 
	<groupId>probcog</groupId>
	<artifactId>probcog</artifactId>
	<version>1.2.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<properties>
	</properties>
	
	<repositories>
		<repository>
			<id>probcog.local</id>
			<name>project</name>
			<url>file:${project.basedir}/repo</url>
		</repository>
		<repository>
			<id>swt-repo</id>
			<url>https://raw.githubusercontent.com/maven-eclipse/swt-repo/master/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.swt</groupId>
			<artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
			<version>4.4</version>
		</dependency>
		<dependency>
			<groupId>org.python</groupId>
			<artifactId>jython</artifactId>
			<version>2.5.3</version>
		</dependency>
		<dependency>
			<groupId>ca.umontreal.iro</groupId>
			<artifactId>ssj</artifactId>
			<version>2.5</version>
		</dependency>
		<dependency>
			<groupId>edu.tum.cs.ias</groupId>
			<artifactId>weka-fipm</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>boris.van.schooten</groupId>
			<artifactId>yprolog</artifactId>
			<version>0.5</version>
		</dependency>
		<dependency>
			<groupId>edu.tum.cs.ias</groupId>
			<artifactId>tumutils</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>edu.ksu.cis</groupId>
			<artifactId>bnj</artifactId>
			<version>3.004-Extended</version>
		</dependency>
		<dependency>
			<groupId>edu.ksu.cis</groupId>
			<artifactId>bnj-res</artifactId>
			<version>3.004-Extended</version>
		</dependency>
		<dependency>
			<groupId>KommuSoft</groupId>
			<artifactId>jahmm</artifactId>
			<version>2010-10-15</version>
		</dependency>
		<dependency>
			<groupId>edu.umass.cs.kdl</groupId>
			<artifactId>proximity</artifactId>
			<version>4.2</version>
		</dependency>
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>1.7.25</version>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.9</source>
					<target>1.9</target>
					<showDeprecation>false</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
			  <groupId>org.codehaus.mojo</groupId>
			  <artifactId>exec-maven-plugin</artifactId>
			  <executions>
			   <execution>
				<configuration>
				 <executable>python</executable>
				 <workingDirectory>src/test/python</workingDirectory>
				 <arguments>
				  <argument>MLNTestCase.py</argument>
				 </arguments>    
				 <environmentVariables>
				   <PYTHONPATH>../../main/python</PYTHONPATH>
				 </environmentVariables>
				</configuration>
				<id>python-test</id>
				<phase>test</phase>
				<goals>
				 <goal>exec</goal>
				</goals>
			   </execution>
			  </executions>
			 </plugin>
		</plugins>
	</build>
</project>
  
  